src/snapshots/zeek_lsp__ast__test__loaded_files_recursive.snap
---
source: src/ast.rs
assertion_line: 346
expression: db.0.loaded_files_recursive(a)

---
[
    Url {
        scheme: "file",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: None,
        port: None,
        path: "/tmp/b.zeek",
        query: None,
        fragment: None,
    },
    Url {
        scheme: "file",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: None,
        port: None,
        path: "/tmp/c.zeek",
        query: None,
        fragment: None,
    },
    Url {
        scheme: "file",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: None,
        port: None,
        path: "/tmp/d.zeek",
        query: None,
        fragment: None,
    },
]
