src/snapshots/zeek_lsp__ast__test__resolve.snap
---
source: src/ast.rs
assertion_line: 421
expression: "super::resolve(&db, node, None, uri.clone())"

---
Some(
    Decl {
        module: String(
            "x",
        ),
        id: "c",
        fqid: "x::c",
        kind: Global,
        is_export: Some(
            false,
        ),
        range: Range {
            start: Position {
                line: 10,
                character: 0,
            },
            end: Position {
                line: 10,
                character: 16,
            },
        },
        selection_range: Range {
            start: Position {
                line: 10,
                character: 7,
            },
            end: Position {
                line: 10,
                character: 8,
            },
        },
        documentation: "```zeek\nglobal c: count;\n```",
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "/x.zeek",
            query: None,
            fragment: None,
        },
    },
)
